// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Icon > matches snapshot with home icon 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="lucide lucide-house w-5 h-5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
    />
    <path
      d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
    />
  </svg>
</div>
`;

exports[`Icon > matches snapshot with layout-dashboard icon 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="lucide lucide-layout-dashboard"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      height="9"
      rx="1"
      width="7"
      x="3"
      y="3"
    />
    <rect
      height="5"
      rx="1"
      width="7"
      x="14"
      y="3"
    />
    <rect
      height="9"
      rx="1"
      width="7"
      x="14"
      y="12"
    />
    <rect
      height="5"
      rx="1"
      width="7"
      x="3"
      y="16"
    />
  </svg>
</div>
`;
